...
            android:text="@string/switchOn"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_here"
        android:inputType="textPersonName" />
</LinearLayout>
